Set max PermGen to 256MB for surefire